--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "lodash": "^4.17.14",
+    "popper.js": "^1.16.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
