--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "axios": "^0.21.2",
     "bootstrap": "^4.4.1",
