--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
@@ -28,6 +27,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lodash": "^4.17.14",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "concurrently": "^4.1.0"
   }
 }
