--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^4.1.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "lodash": "^4.17.14",
-    "mongoose": "^5.3.16",
-    "concurrently": "^4.1.0"
+    "mongoose": "^6.0.0"
   }
 }
