--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.2",
     "bootstrap": "^4.4.1",
+    "bootstrap-icons": "^1.11.3",
     "lodash": "^4.17.14",
     "popper.js": "^1.16.0",
     "react": "^16.6.3",
